--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,10 @@ dependencies:
   shared_preferences: ^2.0.15
   path_provider: ^2.0.1
   file_picker: ^4.3.0
-  image_picker: ^0.8.4+11
   rxdart: ^0.27.3
   flutterwave: ^1.0.1
-  percent_indicator: "^2.1.7+2"
+  # percent_indicator: "^2.1.7+2"
   fluttertoast: ^8.0.9
-  web_socket_channel: ^2.2.0
   socket_io_client: ^2.0.0
   iconly: ^1.0.1
   provider: ^6.0.3
@@ -54,8 +52,9 @@ dependencies:
   cached_network_image: ^3.2.0
   flutter_pdfview: ^1.2.2
   dio: ^4.0.6
-  video_player: ^2.3.0
+  video_player: ^2.4.3
   intl: ^0.17.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
