--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,15 +33,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.0.3
+  flutter_svg: ^2.0.2
   form_field_validator: ^1.1.0
-  photo_view: 0.12.0
+  photo_view: ^0.14.0
   http: ^0.13.5
   shared_preferences: ^2.0.15
   path_provider: ^2.0.1
-  file_picker: ^4.3.0
+  file_picker: ^5.2.5
   rxdart: ^0.27.3
-  flutterwave: ^1.0.1
+  # flutterwave: ^1.0.3
   # percent_indicator: "^2.1.7+2"
   fluttertoast: ^8.0.9
   socket_io_client: ^2.0.0
@@ -51,10 +51,10 @@ dependencies:
   get: ^4.6.5
   cached_network_image: ^3.2.0
   flutter_pdfview: ^1.2.2
-  dio: ^4.0.6
+  dio: ^5.0.1
   video_player: ^2.4.3
-  intl: ^0.17.0
-  google_fonts: ^3.0.1
+  intl: ^0.18.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
