--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,7 @@ post_install do |installer|
     target.build_configurations.each do|config|
       config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator]']='i386 arm64'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
   end
 end
