--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,11 +28,14 @@
 	<true/>
 	<key>NSFileProviderDomainUsageDescription</key>
 	<string>Video call with other users</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to the camera for meetings.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Talk to other users</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>voip</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
